# event-extractor

./: Cargo.toml  README.md  flake.nix  mod.nu
.github/workflows/: nix.yml
src/: lib.rs  main.rs
src/config/: mod.rs  tests.rs
src/ser/: mod.rs  tests.rs
testfiles/: test.vcf  test_fold.vcf  test_no_year.vcf  test_quoted.vcf
