[package]
name = "event-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.10.0"
ical = { version = "0.8.0", default-features = false, features = [
  "vcard",
  "ical",
] }
log = "0.4.19"
quoted_printable = "0.5.0"
thiserror = "1.0.44"
