[package]
name = "event-extractor"
version = "0.3.0"
edition = "2021"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.10.0"
ical = { version = "0.8.0", default-features = false, features = [
  "vcard",
  "ical",
] }
log = "0.4.19"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
# quoted_printable = "0.5.0"
thiserror = "1.0.44"
